--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "/Users/ryandines/.local/share/virtualenvs/BingoRoot-TDGcPPLQ/bin/python"
+    "python.pythonPath": "/Users/ryandines/.local/share/virtualenvs/BingoRoot-TDGcPPLQ/bin/python",
+    "python.linting.pylintArgs": [
+        "--load-plugins=pylint_django"
+   ],
 }
